# py-osu-replay-video-cursor-detect

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
